# Roll35

./: .credo.exs  .dockerignore  .formatter.exs  .gitignore  .yamllint.yaml  .yamllint.yml  Dockerfile  LICENSE  LICENSE.md  README.md  bot.py  convert_spells_csv.py  create_release.sh  data.yaml  healthcheck.sh  mix.exs  prepare_release.sh  pylintrc  pyproject.toml  requirements.txt  roll35.py  run.sh  spells.yaml
.github/: dependabog.yaml  dependabot.yaml  labeler.yml  labels.yaml  labels.yml
.github/workflows/: docker-publish.yaml  docker.yaml  docker.yml  elixir.yaml  label-sync.yaml  label-sync.yml  pr-labeler.yaml  pr-labeler.yml  publish-edge.yaml  publish-edge.yml  publish-release.yaml  publish-release.yml  review.yml  reviewdog.yaml  reviewdog.yml
apps/roll35_bot/: mix.exs
apps/roll35_bot/lib/roll35_bot/: application.ex  armor.ex  command.ex  help.ex  magic_item.ex  ping.ex  renderer.ex  spell.ex  version.ex  weapon.ex
apps/roll35_bot/lib/roll35_bot/commands/: armor.ex  help.ex  magic_item.ex  ping.ex  spell.ex  version.ex  weapon.ex
apps/roll35_bot/test/: test_helper.exs
apps/roll35_bot/test/roll35_bot/: render_test.exs
apps/roll35_bot/test/roll35_bot/commands/: armor_test.exs  help_test.exs  magic_item_test.exs  ping_test.exs  spell_test.exs  version_test.exs  weapon_test.exs
apps/roll35_core/: mix.exs
apps/roll35_core/lib/roll35_core/: application.ex  db.ex  magic_item.ex  renderer.ex  types.ex  util.ex
apps/roll35_core/lib/roll35_core/data/: agent.ex  armor.ex  belt.ex  body.ex  category.ex  chest.ex  classes.ex  compound_agent.ex  eyes.ex  feet.ex  hand.ex  head.ex  headband.ex  keys.ex  macros.ex  neck.ex  potion.ex  ranked_agent.ex  ring.ex  rod.ex  scroll.ex  shoulders.ex  slotless.ex  spell.ex  spelldb.ex  staff.ex  wand.ex  weapon.ex  wondrous.ex  wrists.ex
apps/roll35_core/priv/: armor.yaml  belt.yaml  body.yaml  chest.yaml  classes.yaml  eyes.yaml  headband.yaml  keys.yaml  potion.yaml  ring.yaml  rod.yaml  scroll.yaml  shoulders.yaml  slotless.yaml  spells.yaml  staff.yaml  wand.yaml  weapon.yaml  wondrous.yaml  wrists.yaml
apps/roll35_core/test/: test_helper.exs
apps/roll35_core/test/roll35_core/: db_test.exs  magic_item_test.exs  types_test.exs  util_test.exs
apps/roll35_core/test/roll35_core/data/: armor_test.exs  belt_test.exs  body_test.exs  category_test.exs  chest_test.exs  classes_test.exs  compound_agent_test.exs  eyes_text.exs  feet_test.exs  hand_test.exs  head_test.exs  headband_test.exs  keys_test.exs  neck_test.exs  potion_test.exs  ranked_agent_test.exs  ring_test.ex  rod_test.exs  scroll_test.exs  shoulders_test.exs  slotless_test.exs  spell_test.exs  staff_test.exs  wand_test.exs  weapon_test.exs  wondrous_test.exs  wrists_test.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
roll35/: __init__.py  __main__.py  armor.py  bot.py  cog.py  common.py  core.py  log.py  magicitem.py  ordnance.py  parser.py  renderer.py  retcode.py  settlement.py  spell.py  weapon.py
roll35/cogs/: __init__.py  core.py  magicitem.py  ordnance.py  settlement.py  spell.py
roll35/data/: __init__.py  agent.py  armor.py  category.py  classes.py  compound.py  constants.py  ordnance.py  ranked.py  settlement.py  spell.py  types.py  weapons.py  wondrous.py
roll35/data/files/: armor.yaml  belt.yaml  category.yaml  classes.yaml  feet.yaml  hand.yaml  head.yaml  headband.yaml  keys.yaml  neck.yaml  potion.yaml  ring.yaml  rod.yaml  scroll.yaml  settlement.yaml  shoulders.yaml  slotless.yaml  spell.yaml  staff.yaml  structure.yaml  wand.yaml  weapon.yaml  wondrous.yaml
roll35/renderer/: __init__.py  types.py
roll35/roller/: __init__.py  magicitem.py  settlement.py  spell.py
roll35/types/: __init__.py  base.py  cog.py  container.py  item.py  list.py  map.py  range.py  ranks.py  readystate.py  renderdata.py  rendermap.py  retcode.py
scripts/: check-labels.py  convert_spells_csv.py  gen-docker-tags.py  run.sh  version-check.sh
