[tool.poetry]
name = "roll35"
version = "5.1.1"
description = "A Python module and Discord bot for rolling random items for Pathfinder 1e."
authors = ["Austin S. Hemmelgarn <ahferroin7@gmail.com>"]
license = "MITNFA AND OGL-1.1a"
readme = "README.md"
repository = "https://github.com/Ferroin/Roll35/"

[tool.poetry.scripts]
roll35-bot = "roll35.bot:main"

[tool.poetry.dependencies]
python = "^3.10"
jaro-winkler = "^2.0"
Jinja2 = "^3.1.2"
nextcord = {version = "^2.4.2", extras = ["speed"]}
ruamel-yaml = "^0.17.26"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.mypy]
python_version = "3.10"
incremental = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "jaro"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "roll35.cogs.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
