[tool.poetry]
name = "roll35"
version = "6.1.1"
description = "A Python module and Discord bot for rolling random items for Pathfinder 1e."
authors = ["Austin S. Hemmelgarn <ahferroin7@gmail.com>"]
license = "MITNFA AND OGL-1.1a"
readme = "README.md"
repository = "https://github.com/Ferroin/Roll35/"

[tool.poetry.scripts]
roll35-bot = "roll35.bot:main"
roll35-check-dataset = "roll35.data:test_dataset"

[tool.poetry.dependencies]
python = "^3.10"
jaro-winkler = "^2.0"
Jinja2 = "^3.1.2"
nextcord = {version = "^2.6.0", extras = ["speed"]}
ruamel-yaml = "^0.18.3"
pydantic = "^2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
flake8-2020 = "^1.8.1"
flake8-quotes = "^3.3.2"
flake8-debug = "^0.2.0"
flake8-async = "^22.11.14"
flake8-sfs = "^0.0.4"
yamllint = "^1.32.0"
bandit = "^1.7.5"

[tool.mypy]
python_version = "3.10"
incremental = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "jaro"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "roll35.cogs.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
