[tool.poetry]
name = "roll35"
version = "7.1.0"
description = "A Python module and Discord bot for rolling random items for Pathfinder 1e."
authors = ["Austin S. Hemmelgarn <ahferroin7@gmail.com>"]
license = "MITNFA AND OGL-1.1a"
readme = "README.md"
repository = "https://github.com/Ferroin/Roll35/"

[tool.poetry.scripts]
roll35-bot = "roll35.bot:main"
roll35-check-dataset = "roll35.data:test_dataset"

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
jaro-winkler = "^2.0.3"
Jinja2 = "^3.1.4"
nextcord = {version = "^2.6.0", extras = ["speed"]}
pydantic = "^2.9.2"
python = "^3.12"
ruamel-yaml = "^0.18.6"
setuptools = "^75.2.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
flake8-2020 = "^1.8.1"
flake8 = "^7.1.1"
flake8-async = "^24.10.2"
flake8-debug = "^0.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
flake8-sfs = "^1.0.0"
isort = "^5.13.2"
mypy = "^1.12.1"
pydantic = "^2.9.2"
ruamel-yaml = "^0.18.6"
types-aiofiles = "^24.1.0.20240626"
yamllint = "^1.32.0"

[tool.mypy]
python_version = "3.12"
cache_fine_grained = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
    '^.git/*',
    '^.cache/*',
]
files = "**/*.py"
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "jaro"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "roll35.cogs.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
combine_star = true
include_trailing_comma = false
line_length = 150
lines_between_types = 1
remove_redundant_aliases = true
reverse_relative = true
skip_gitignore = true
use_parentheses = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
